Assignment_4/template.yaml
AWSTemplateFormatVersion: '2010-09-09'
Transform: AWS::Serverless-2016-10-31
Description: Serverless stack for Details API with RDS MySQL, Lambda Authorizer, and S3 static site

Globals:
  Function:
    Runtime: python3.12
    Timeout: 30
    MemorySize: 512
    Tracing: Active

Parameters:
  VpcCidr:
    Type: String
    Default: 10.0.0.0/16
  PublicSubnetCidr:
    Type: String
    Default: 10.0.0.0/24
  PrivateSubnet1Cidr:
    Type: String
    Default: 10.0.1.0/24
  PrivateSubnet2Cidr:
    Type: String
    Default: 10.0.2.0/24

  DBName:
    Type: String
    Default: bankdb
  DBUsername:
    Type: String
    Default: app_user
  DBPort:
    Type: Number
    Default: 3306
  DBInstanceClass:
    Type: String
    Default: db.t4g.micro
  DBAllocatedStorage:
    Type: Number
    Default: 20
  DBEngineVersion:
    Type: String
    Default: '8.0.36'
  MultiAZ:
    Type: String
    AllowedValues: ['true','false']
    Default: 'false'
  DeletionProtection:
    Type: String
    AllowedValues: ['true','false']
    Default: 'false'

  DbSecretName:
    Type: String
    Default: rds/mysql/app/creds

  AuthorizerToken:
    Type: String
    Default: letmein-123
    NoEcho: true

  AllowedOrigin:
    Type: String
    Default: "*"
  AllowedHeaders:
    Type: String
    Default: auth_token,customer_id,content-type

  CodeBucket:
    Type: String
    Description: S3 bucket containing code artifacts (e.g., mysql-layer.zip)
  MysqlLayerKey:
    Type: String
    Default: mysql-layer.zip

  WebsiteBucketName:
    Type: String
    Description: Globally-unique S3 bucket name for static website hosting

Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VpcCidr
      EnableDnsHostnames: true
      EnableDnsSupport: true
      Tags:
        - Key: Name
          Value: details-vpc

  InternetGateway:
    Type: AWS::EC2::InternetGateway

  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway

  PublicSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Ref PublicSubnetCidr
      MapPublicIpOnLaunch: true
      AvailabilityZone: !Select [0, !GetAZs '']
      Tags:
        - Key: Name
          Value: public-subnet

  PrivateSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Ref PrivateSubnet1Cidr
      MapPublicIpOnLaunch: false
      AvailabilityZone: !Select [0, !GetAZs '']
      Tags:
        - Key: Name
          Value: private-subnet-1

  PrivateSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Ref PrivateSubnet2Cidr
      MapPublicIpOnLaunch: false
      AvailabilityZone: !Select [1, !GetAZs '']
      Tags:
        - Key: Name
          Value: private-subnet-2

  NatEip:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc

  NatGateway:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt NatEip.AllocationId
      SubnetId: !Ref PublicSubnet

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC

  PublicRouteToIgw:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  PublicSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet

  PrivateRouteTable1:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC

  PrivateRoute1ToNat:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTable1
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway

  PrivateSubnet1Assoc:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTable1
      SubnetId: !Ref PrivateSubnet1

  PrivateRouteTable2:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC

  PrivateRoute2ToNat:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTable2
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway

  PrivateSubnet2Assoc:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTable2
      SubnetId: !Ref PrivateSubnet2

  LambdaSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: SG for Lambda (egress to RDS and internet via NAT)
      VpcId: !Ref VPC
      SecurityGroupEgress:
        - IpProtocol: -1
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: lambda-sg

  RDSSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: SG for RDS MySQL (ingress from Lambda SG)
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: !Ref DBPort
          ToPort: !Ref DBPort
          SourceSecurityGroupId: !GetAtt LambdaSecurityGroup.GroupId
      Tags:
        - Key: Name
          Value: rds-sg

  DBSubnetGroup:
    Type: AWS::RDS::DBSubnetGroup
    Properties:
      DBSubnetGroupDescription: Private subnets for RDS
      SubnetIds:
        - !Ref PrivateSubnet1
        - !Ref PrivateSubnet2

  DbCredentialsSecret:
    Type: AWS::SecretsManager::Secret
    Properties:
      Name: !Ref DbSecretName
      Description: Credentials for RDS MySQL
      GenerateSecretString:
        SecretStringTemplate: !Sub |
          {"username":"${DBUsername}"}
        GenerateStringKey: password
        PasswordLength: 32
        ExcludePunctuation: true

  RDSInstance:
    Type: AWS::RDS::DBInstance
    Properties:
      DBName: !Ref DBName
      Engine: mysql
      EngineVersion: !Ref DBEngineVersion
      DBInstanceClass: !Ref DBInstanceClass
      AllocatedStorage: !Ref DBAllocatedStorage
      PubliclyAccessible: false
      MultiAZ: !Ref MultiAZ
      DeletionProtection: !Ref DeletionProtection
      MasterUsername: !Ref DBUsername
      MasterUserPassword: !Sub '{{resolve:secretsmanager:${DbCredentialsSecret}::password}}'
      VPCSecurityGroups:
        - !GetAtt RDSSecurityGroup.GroupId
      DBSubnetGroupName: !Ref DBSubnetGroup

  MysqlLayer:
    Type: AWS::Lambda::LayerVersion
    Properties:
      CompatibleRuntimes: [python3.12]
      Content:
        S3Bucket: !Ref CodeBucket
        S3Key: !Ref MysqlLayerKey
      LayerName: mysql-connector-layer
      Description: MySQL connector dependencies

  AuthorizerFunction:
    Type: AWS::Serverless::Function
    Properties:
      CodeUri: src/authorizer/
      Handler: authorizer.handler
      Description: Lambda TOKEN authorizer for API
      Environment:
        Variables:
          EXPECTED_TOKEN: !Ref AuthorizerToken
      Policies:
        - AWSLambdaBasicExecutionRole

  ApiGateway:
    Type: AWS::Serverless::Api
    Properties:
      StageName: prod
      TracingEnabled: true
      EndpointConfiguration: REGIONAL
      Cors:
        AllowMethods: "'OPTIONS,GET'"
        AllowHeaders: !Sub "'${AllowedHeaders}'"
        AllowOrigin: !Sub "'${AllowedOrigin}'"
      Auth:
        DefaultAuthorizer: LambdaTokenAuthorizer
        AddDefaultAuthorizerToCorsPreflight: false  
        Authorizers:
          LambdaTokenAuthorizer:
            FunctionArn: !GetAtt AuthorizerFunction.Arn
            FunctionPayloadType: TOKEN
            Identity:
              Headers:
                - auth_token
            AuthorizerResultTtlInSeconds: 0

  GatewayResponseDefault4XX:
    Type: AWS::ApiGateway::GatewayResponse
    Properties:
      ResponseType: DEFAULT_4XX
      RestApiId: !Ref ApiGateway
      ResponseParameters:
        gatewayresponse.header.Access-Control-Allow-Origin: !Sub "'${AllowedOrigin}'"
        gatewayresponse.header.Access-Control-Allow-Headers: !Sub "'${AllowedHeaders}'"
        gatewayresponse.header.Access-Control-Allow-Methods: "'OPTIONS,GET'"
  GatewayResponseDefault5XX:
    Type: AWS::ApiGateway::GatewayResponse
    Properties:
      ResponseType: DEFAULT_5XX
      RestApiId: !Ref ApiGateway
      ResponseParameters:
        gatewayresponse.header.Access-Control-Allow-Origin: !Sub "'${AllowedOrigin}'"
        gatewayresponse.header.Access-Control-Allow-Headers: !Sub "'${AllowedHeaders}'"
        gatewayresponse.header.Access-Control-Allow-Methods: "'OPTIONS,GET'"


  DetailsFunction:
    Type: AWS::Serverless::Function
    Properties:
      CodeUri: src/app/
      Handler: app.lambda_handler
      Description: Returns count and sum of transactions for a customer
      Layers:
        - !Ref MysqlLayer
      VpcConfig:
        SecurityGroupIds:
          - !GetAtt LambdaSecurityGroup.GroupId
        SubnetIds:
          - !Ref PrivateSubnet1
          - !Ref PrivateSubnet2
      Environment:
        Variables:
          SECRET_ARN: !Ref DbCredentialsSecret
          DB_HOST: !GetAtt RDSInstance.Endpoint.Address
          DB_PORT: !Ref DBPort
          DB_NAME: !Ref DBName
          ALLOWED_ORIGIN: !Ref AllowedOrigin
          ALLOWED_HEADERS: !Ref AllowedHeaders
      Policies:
        - AWSLambdaBasicExecutionRole
        - AWSLambdaVPCAccessExecutionRole
        - Statement:
            Effect: Allow
            Action:
              - secretsmanager:GetSecretValue
            Resource: !Ref DbCredentialsSecret
        - Statement:
            Effect: Allow
            Action:
              - kms:Decrypt
            Resource: "*"
            Condition:
              StringEquals:
                kms:ViaService: !Sub secretsmanager.${AWS::Region}.amazonaws.com
      Events:
        GetDetails:
          Type: Api
          Properties:
            RestApiId: !Ref ApiGateway
            Path: /Details
            Method: GET
        OptionsDetails:
          Type: Api
          Properties:
            RestApiId: !Ref ApiGateway
            Path: /Details
            Method: OPTIONS
            Auth:
              Authorizer: NONE 

  WebsiteBucket:
    Type: AWS::S3::Bucket
    Properties:
      BucketName: !Ref WebsiteBucketName
      OwnershipControls:
        Rules:
          - ObjectOwnership: BucketOwnerPreferred
      PublicAccessBlockConfiguration:
        BlockPublicAcls: false
        BlockPublicPolicy: false
        IgnorePublicAcls: false
        RestrictPublicBuckets: false
      WebsiteConfiguration:
        IndexDocument: index.html

  WebsiteBucketPolicy:
    Type: AWS::S3::BucketPolicy
    Properties:
      Bucket: !Ref WebsiteBucket
      PolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Sid: PublicReadForWebsite
            Effect: Allow
            Principal: '*'
            Action:
              - s3:GetObject
            Resource: !Sub '${WebsiteBucket.Arn}/*'

Outputs:
  ApiBaseUrl:
    Description: Invoke URL for the API
    Value: !Sub 'https://${ApiGateway}.execute-api.${AWS::Region}.amazonaws.com/prod'
  DetailsEndpoint:
    Description: GET /Details endpoint
    Value: !Sub 'https://${ApiGateway}.execute-api.${AWS::Region}.amazonaws.com/prod/Details'
  WebsiteURL:
    Description: S3 static website URL
    Value: !GetAtt WebsiteBucket.WebsiteURL
  DBEndpointAddress:
    Description: RDS MySQL endpoint address
    Value: !GetAtt RDSInstance.Endpoint.Address
  SecretArn:
    Description: ARN of DB credentials secret
    Value: !Ref DbCredentialsSecret
